--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,9 +1,23 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>register</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+    <ion-item>
+        <ion-label position="stacked">Email</ion-label>
+        <ion-input type="email" placeholder="Email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-label position="stacked">Clave</ion-label>
+        <ion-input type="password" placeholder="Clave"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-button color="primary">Registrar</ion-button>
+    </ion-item>
 
 </ion-content>
