--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,23 +1,29 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>register</ion-title>
+        <ion-title>Register User</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <form>
+        <ion-item lines="full">
+            <ion-label position="floating">Email</ion-label>
+            <ion-input type="text" #email required></ion-input>
+        </ion-item>
 
-    <ion-item>
-        <ion-label position="stacked">Email</ion-label>
-        <ion-input type="email" placeholder="Email"></ion-input>
-    </ion-item>
 
-    <ion-item>
-        <ion-label position="stacked">Clave</ion-label>
-        <ion-input type="password" placeholder="Clave"></ion-input>
-    </ion-item>
+        <ion-item lines="full">
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="password" #password required></ion-input>
+        </ion-item>
 
-    <ion-item>
-        <ion-button color="primary">Registrar</ion-button>
-    </ion-item>
+
+
+        <ion-row>
+            <ion-col>
+                <ion-button type="submit" (click)="onRegister(email, password)" expand="block">Registrar</ion-button>
+            </ion-col>
+        </ion-row>
+    </form>
 
 </ion-content>
