--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Login</ion-title>
+        <ion-title>Iniciar Sesión</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -22,7 +22,8 @@
 
         <ion-row>
             <ion-col>
-                <ion-button type="submit" (click)="onLogin(email, password)" expand="block">Login</ion-button>
+                <ion-button type="submit" (click)="onLogin(email, password)" expand="full">Login</ion-button>
+                <ion-button routerLink="/register" expand="full">Crear una Cuenta</ion-button>
             </ion-col>
         </ion-row>
 
@@ -30,10 +31,18 @@
         <span class="divider line one-line"> or </span>
         <ion-row>
             <ion-col>
-                <ion-button type="submit" color="danger" (click)="onLoginGoogle(email, password)" expand="block">Login con Google</ion-button>
+                <ion-button type="submit" color="danger" (click)="onLoginGoogle()" expand="block">Login con Google</ion-button>
             </ion-col>
         </ion-row>
         -->
     </form>
+
+    <ion-row>
+        <ion-col>
+            <p>
+                <a class="center-text" routerLink="/forgot-password">¿Olvidó su contraseña?</a>
+            </p>
+        </ion-col>
+    </ion-row>
 
 </ion-content>
