--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -1,9 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>forgot-password</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Reestablecer Contraseña</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+    <form>
+        <ion-item lines="full">
+            <ion-label position="floating">Email</ion-label>
+            <ion-input type="text" #email required></ion-input>
+        </ion-item>
+
+
+        <ion-row>
+            <ion-col>
+                <ion-button type="submit" (click)="onResetPassword(email)" expand="full">Solicitar Restablecimiento</ion-button>
+            </ion-col>
+        </ion-row>
+
+        <ion-col>
+            <ion-button expand="full" color="success" routerLink="/login">Volver a login</ion-button>
+        </ion-col>
+    </form>
 
 </ion-content>
