--- a/src/app/verify-email/verify-email.page.html
+++ b/src/app/verify-email/verify-email.page.html
@@ -1,9 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>verify-email</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Verificación de Correo</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="user$ | async as user">
 
+    <ion-row>
+        <ion-col>
+            <P>Te enviaremos un correo a <strong>{{user.email}}</strong></P>
+            <p>por favor verifica tu dirección de correo electrónico.</p>
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+        <ion-col>
+            <!--<button (click)="onSendEmail()">Reenviar verificación</button>-->
+            <ion-button type="submit" expand="full" color="danger" (click)="onSendEmail()">Enviar verificación</ion-button>
+        </ion-col>
+
+    </ion-row>
+
+    <ion-col>
+        <ion-button expand="full" color="success" routerLink="/login">Volver a login</ion-button>
+    </ion-col>
 </ion-content>
