--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,6 +18,8 @@
         <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
     </div>
 
-    <ion-button expand="full" routerLink="/pagina1">Enviar una Solicitud</ion-button>
-    <ion-button expand="full">Revisar Solicitudes Enviadas</ion-button>
+    <ion-button routerLink="/pagina1">
+        Acceder a Página1
+    </ion-button>
+
 </ion-content>
