--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-title>
-            Blank
+        <ion-title style="text-align: center;">
+            MuniApp
         </ion-title>
     </ion-toolbar>
 </ion-header>
@@ -14,12 +14,14 @@
     </ion-header>
 
     <div id="container">
-        <strong>Reinaldo Franco</strong>
         <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
     </div>
 
-    <ion-button routerLink="/pagina1">
-        Acceder a Página1
+    <ion-button expand="full" routerLink="/pagina1">
+        Enviar una Solicitud
+    </ion-button>
+    <ion-button expand="full" routerLink="">
+        Revisar Solicitudes
     </ion-button>
 
 </ion-content>
