--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Iniciar Sesión</ion-title>
+        <ion-title style="text-align: center;">Iniciar Sesión</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -22,7 +22,7 @@
 
         <ion-row>
             <ion-col>
-                <ion-button type="submit" (click)="onLogin(email, password)" expand="full">Login</ion-button>
+                <ion-button type="submit" (click)="onLogin(email, password)" expand="full" color="success">Iniciar Sesión</ion-button>
                 <ion-button routerLink="/register" expand="full">Crear una Cuenta</ion-button>
             </ion-col>
         </ion-row>
