--- a/src/app/pagina1/pagina1.page.html
+++ b/src/app/pagina1/pagina1.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Prueba FireStore Insertar Datos</ion-title>
+        <ion-title style="text-align: center;">Solicitud</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -15,11 +15,31 @@
         <ion-label>Descripción:</ion-label>
         <ion-input [(ngModel)]="tareaEditando.descripcion"></ion-input>
     </ion-item>
+    <ion-item>
+        <ion-label>Nombre:</ion-label>
+        <ion-input [(ngModel)]="tareaEditando.nombre"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label>Apellido:</ion-label>
+        <ion-input [(ngModel)]="tareaEditando.apellido"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label>C.I:</ion-label>
+        <ion-input [(ngModel)]="tareaEditando.cedula"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label>Dirección/Barrio:</ion-label>
+        <ion-input [(ngModel)]="tareaEditando.direccion"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label>Nro. de Celular:</ion-label>
+        <ion-input [(ngModel)]="tareaEditando.celular"></ion-input>
+    </ion-item>
 
-    <ion-button (click)="clickBotonInsertar()">Añadir Tarea</ion-button>
+    <ion-button color="success" expand="full" (click)="clickBotonInsertar()">Enviar Solicitud</ion-button>
 
 
-    <!-- lista de consulta de tareas -->
+    <!-- lista de consulta de tareas 
     <h1>Lista de Tareas</h1>
     <ion-list>
         <ion-item *ngFor="let documentTarea of arrayColeccionTareas">
@@ -30,12 +50,15 @@
                 <ion-row>
                     <p>{{documentTarea.data.descripcion}}</p>
                 </ion-row>
+                <ion-row>
+                    <p>{{documentTarea.data.nombre}}</p>
+                </ion-row>
             </ion-grid>
         </ion-item>
-    </ion-list>
+    </ion-list> -->
 
 
-    <!-- borrar registro -->
+    <!-- borrar registro 
     <h1>Seleccionar registro para eliminar tarea</h1>
     <ion-list>
         <ion-item *ngFor="let documentTarea of arrayColeccionTareas" (click)="selecTarea(documentTarea)">
@@ -45,13 +68,13 @@
     <ion-button (click)="clicBotonBorrar()">Borrar tarea</ion-button>
 
 
-    <ion-button (click)="clicBotonModificar()">Modificar tarea</ion-button>
+    <ion-button (click)="clicBotonModificar()">Modificar tarea</ion-button> -->
 
 
 
     <!-- botón de volver a HOME-->
-    <ion-button routerLink="/home">
-        Volver a Home
+    <ion-button color="warning" routerLink="/home">
+        Volver a Inicio
     </ion-button>
 
 
