--- a/src/app/verify-email/verify-email.page.html
+++ b/src/app/verify-email/verify-email.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Verificación de Correo</ion-title>
+        <ion-title style="text-align: center;">Verificación de Correo</ion-title>
     </ion-toolbar>
 </ion-header>
 
