--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,27 +1,25 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-title style="text-align: center;">
-            MuniApp
+        <ion-title>
+            <div>
+                <p>MuniApp</p>
+            </div>
         </ion-title>
+
     </ion-toolbar>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Blank</ion-title>
-        </ion-toolbar>
-    </ion-header>
 
-    <div id="container">
-        <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-    </div>
-
-    <ion-button expand="full" routerLink="/pagina1">
+    <ion-button color="success" expand="full" routerLink="/pagina1">
         Enviar una Solicitud
     </ion-button>
-    <ion-button expand="full" routerLink="">
+    <ion-button color="medium" expand="full" routerLink="/solicitudes">
         Revisar Solicitudes
     </ion-button>
+
+
+    <p class="ion-text-end"><a routerLink="">cerrar sesión</a></p>
 
 </ion-content>
